--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/style.css">
     <title>连连看</title>
-    <link rel="stylesheet" type="text/css" href="http://hovertree.com/texiao/html5/43/css/normalize.css" />
-    <link rel="stylesheet" type="text/css" href="http://hovertree.com/texiao/html5/43/css/hovertree.css">
+    <link rel="stylesheet" type="text/css" href="https://hovertree.com/texiao/html5/43/css/normalize.css" />
+    <link rel="stylesheet" type="text/css" href="https://hovertree.com/texiao/html5/43/css/hovertree.css">
 </head>
 
 <body>
@@ -46,8 +46,8 @@
             <a class="story" href="gallary.html">查看故事相册></a>
         </div>
     </div>
-    <script type="text/javascript" src="http://down.hovertree.com/jquery/jquery-1.11.0.min.js"></script>
-    <script type="text/javascript" src="http://hovertree.com/texiao/html5/43/js/jquery.fireworks.js"></script>
+    <script type="text/javascript" src="js/jquery.js"></script>
+    <script type="text/javascript" src="https://hovertree.com/texiao/html5/43/js/jquery.fireworks.js"></script>
 </body>
 
 </html>
