--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/style.css">
-    <title>连连看</title>
+    <title>六月生日会</title>
     <link rel="stylesheet" type="text/css" href="https://hovertree.com/texiao/html5/43/css/normalize.css" />
     <link rel="stylesheet" type="text/css" href="https://hovertree.com/texiao/html5/43/css/hovertree.css">
 </head>
