add touch event

--- a/gallary.html
+++ b/gallary.html
@@ -114,12 +114,12 @@
 				tX = 0,
 				tY = 10,
 				index = 0;//滚轮初始值
-			document.onmousedown = function (e) {
+			document.ontouchstart = function (e) {
 				clearInterval(obox.timer);
 				e = e || window.event;
 				var sX = e.clientX,
 					sY = e.clientY;
-				this.onmousemove = function (e) {
+				this.ontouchmove = function (e) {
 					e = e || window.event;
 					var nX = e.clientX,
 						nY = e.clientY;
@@ -133,8 +133,8 @@
 					sX = nX;
 					sY = nY;
 				}
-				this.onmouseup = function () {
-					this.onmousemove = this.onmouseup = null;
+				this.ontouchend = function () {
+					this.ontouchmove = this.ontouchend = null;
 					obox.timer = setInterval(function () {
 						desX *= 0.95;
 						desY *= 0.95;
