--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <div class="hovertree"></div>
     <div class="winner hide">
         <div class="text">
-            <p class="name">恭喜兜兜通关</p>
+            <p class="name">恭喜通关</p>
             <p class="timeUsed">用时30秒</p>
             <a class="story" href="gallary.html">查看故事相册></a>
         </div>
