--- a/gallary.html
+++ b/gallary.html
@@ -30,8 +30,8 @@
 		#box {
 			position: relative;
 			display: flex;
-			width: 130px;
-			height: 200px;
+			width: 260px;
+			height: 400px;
 			margin: auto;
 			transform-style: preserve-3d;
 			transform: rotateX(-10deg);
@@ -44,7 +44,7 @@
 			top: 0;
 			width: 100%;
 			height: 100%;
-			line-height: 200px;
+			line-height: 260px;
 			font-size: 50px;
 			text-align: center;
 			box-shadow: 0 0 10px #fff;
@@ -101,8 +101,8 @@
 				aDiv = obox.getElementsByTagName('div');
 
 			for (var i = 0; i < aDiv.length; i++) {
-				aDiv[i].style.background = "url(birthday/" + (i + 1) + ".jpg) center/cover";
-				aDiv[i].style.transform = "rotateY(" + (i * 36) + "deg) translate3d(0,0,350px)";
+				aDiv[i].style.background = "url(birthday/" + (i) + ".jpg) center/cover";
+				aDiv[i].style.transform = "rotateY(" + (i * 36) + "deg) translate3d(0,0,500px)";
 				aDiv[i].style.transition = "transform 1s " + (aDiv.length - i) * 0.2 + "s";
 			}
 			var sX,
