--- a/gallary.html
+++ b/gallary.html
@@ -123,7 +123,7 @@
 				document.addEventListener('touchmove', function (e) {
 
 					e = e || window.event;
-					// e.preventDefault();
+					e.preventDefault();
 					var nX = e.changedTouches[0].clientX,
 						nY = e.changedTouches[0].clientY;
 					// 当前点的坐标和前一点的坐标差值
