--- a/gallary.html
+++ b/gallary.html
@@ -107,6 +107,8 @@
 			}
 			var sX,
 				sY,
+				lastTx = 0,
+				lastTy = 0,
 				nX,
 				nY,
 				desX = 0,
@@ -131,8 +133,10 @@
 					desY = nY - sY;
 					tX += desX * 0.01;
 					tY += desY * 0.01;
+					lastTx += tX;
+					lastTy += tY;
 
-					obox.style.transform = "rotateX(-10deg) rotateY(" + tX + "deg)";
+					obox.style.transform = "rotateX(-10deg) rotateY(" + lastTx + "deg)";
 
 					sX = nX;
 					sY = nY;
@@ -145,7 +149,9 @@
 						desY *= 0.95;
 						tX += desX * 0.01;
 						tY += desY * 0.01;
-						obox.style.transform = "rotateX(-10deg) rotateY(" + tX + "deg)";
+						lastTx += tX;
+						lastTy += tY;
+						obox.style.transform = "rotateX(-10deg) rotateY(" + lastTx + "deg)";
 						if (Math.abs(desX) < 0.5 && Math.abs(desY) < 0.5) {
 							clearInterval(obox.timer);
 						}
